[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Bullet.png" type="Texture" id=2]
[ext_resource path="res://Assets/SolidLight.png" type="Texture" id=3]
[ext_resource path="res://Assets/Light.png" type="Texture" id=4]
[ext_resource path="res://SFX/lightball.ogg" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.898039, 0.898039, 0.596078, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.5
color_ramp = SubResource( 3 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1
light_mode = 1

[sub_resource type="CircleShape2D" id=6]
radius = 3.0

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.898039, 0.898039, 0.596078, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, -98, 0 )
initial_velocity = 20.0
angular_velocity = 720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 9 )

[node name="Area2D" type="Area2D"]
collision_layer = 0
collision_mask = 5
script = ExtResource( 1 )

[node name="Particles2D2" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -17 )
lifetime = 0.08
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 2, 2, 1, 1 )
material = SubResource( 5 )
position = Vector2( 0, -17 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.35, 0.25 )
texture = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 7 )
position = Vector2( 0, -17 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.72
process_material = SubResource( 10 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 5

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 0, -17 )
color = Color( 0.898039, 0.898039, 0.596078, 1 )
range_height = 30.0
shadow_enabled = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
attenuation = 0.287175

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
